# digitaler-frieden

./: .gitignore  Cargo.toml  Trunk.toml  flake.nix  index.html  input.css  package-lock.json
.github/workflows/: deploy.yml
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs  router.rs
frontend/src/pages/: deceased.rs  documents.rs  home.rs  relationship.rs  signup.rs
public/: styles.css
src/: lib.rs  main.rs  pages.rs  router.rs  validation.rs
src/pages/: clues.rs  deceased.rs  home.rs  register.rs  relationship.rs  signup.rs  verify.rs
